issue,posting: Remove 'text-align: justify'

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1980,7 +1980,6 @@
     }
     .content {
         /*width: 700px;*/
-       text-align:justify;
        margin-bottom: 20px;
        a { font-weight:bold; }
     }
@@ -2308,7 +2307,6 @@ div.markdown-preview {
             }
             .title {
                 margin-bottom: 5px;
-                text-align:justify;
                 font-weight: bold;
 
                 .label-notice {
